Added challenge & problems

--- a/phase_3/week_1/3_21/basic_stats_interviews.ipynb
+++ b/phase_3/week_1/3_21/basic_stats_interviews.ipynb
@@ -6,13 +6,23 @@
    "metadata": {},
    "source": [
     "## Q1\n",
-    "\n"
+    "\n",
+    "You're given a dataset that has less than 50 samples and appears to take a leptokurtic distribution. To confirm, you calculate excess kurtosis and get 1.583. What should your next steps be with this dataset?\n",
+    "\n",
+    "Uncomment the best answer."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "#print(\"Collect more data\")\n",
+    "#print(\"Remove outliers\")\n",
+    "#print(\"Log-Normalize\")\n",
+    "#print(\"Look for more classes in your data\")"
+   ]
   },
   {
    "attachments": {},
@@ -20,6 +30,146 @@
    "metadata": {},
    "source": [
     "## Q2\n",
+    "\n",
+    "You're given a dataset that has multiple \"camel humps.\" What should your next steps be with this dataset?\n",
+    "\n",
+    "Uncomment the best answer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(\"Collect more data\")\n",
+    "#print(\"Remove outliers\")\n",
+    "#print(\"Log-Normalize\")\n",
+    "#print(\"Look for more classes in your data\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q3\n",
+    "\n",
+    "You're given a dataset that is right-skewed. To confirm, you calculate skew and get a measure of 3.28. What should your next steps be with this dataset?\n",
+    "\n",
+    "Uncomment the best answer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(\"Collect more data\")\n",
+    "#print(\"Remove outliers\")\n",
+    "#print(\"Log-Normalize\")\n",
+    "#print(\"Look for more classes in your data\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q4\n",
+    "\n",
+    "In all above questions, what sort of distribution are we attempting to find?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write answer here"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For questions 5 - 8, use observations from the following code output:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "clean_data = pd.read_csv(\"data/encoded_data.csv\")\n",
+    "encode_df.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q8\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For questions 9-10, use observations from the following code output:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q9\n",
     "\n"
    ]
   },
@@ -33,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q3\n",
+    "## Q10\n",
     "\n"
    ]
   },
