--- a/phase_3/week_1/3_21/basic_stats_review.ipynb
+++ b/phase_3/week_1/3_21/basic_stats_review.ipynb
@@ -182,6 +182,46 @@
     "\n",
     "plt.savefig(\"LAWLARGE_dice.jpg\")"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hypothesis Testing\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8\n",
+      "0.5\n",
+      "t-test Ttest_indResult(statistic=1.405563856997455, pvalue=0.1768796480794003)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random \n",
+    "from scipy import stats\n",
+    "import scipy\n",
+    "\n",
+    "# 1 = heads\n",
+    "# 0 = tails\n",
+    "unfair_coin = [1, 1, 1, 1, 1, 0, 1, 1, 0, 1]\n",
+    "fair_coin = [random.randint(0, 1) for _ in range(0, len(unfair_coin))]\n",
+    "\n",
+    "print(sum(unfair_coin)/len(unfair_coin))\n",
+    "print(sum(fair_coin)/len(fair_coin))\n",
+    "\n",
+    "print(\"t-test\", stats.ttest_ind(unfair_coin, fair_coin))"
+   ]
   }
  ],
  "metadata": {
