--- a/phase_3/week_1/3_21/challenge_stats_interviews.ipynb
+++ b/phase_3/week_1/3_21/challenge_stats_interviews.ipynb
@@ -26,7 +26,12 @@
    "metadata": {},
    "source": [
     "## Q2\n",
-    "\n"
+    "\n",
+    "We have a deck of 52 cards with 4 suites: heart, spade, diamond, and clubs.\n",
+    "\n",
+    "Our \n",
+    "\n",
+    "What is the probability of ra select"
    ]
   },
   {
