Added missing patterns

--- a/tech_patterns/cyclic_sort.ipynb
+++ b/tech_patterns/cyclic_sort.ipynb
@@ -7,16 +7,17 @@
    "source": [
     "## Cyclic Sort\n",
     "\n",
-    "**Use-Case** :\n",
+    "**Use-Case** : Let's say we are given an array (aka list) containing numbers in a strict range of `a` to `b`. (Usually this is 1 to n or 0 to n). \n",
     "\n",
-    "**Example problem** :\n",
+    "Sometimes within problems, there are duplicates within this range, so we are not guaranteed that each number will appear in our list. However we are guaranteed that the numbers will be >= `a` and `<=` b. How can we use this fact to assist our time-complexity?\n",
     "\n",
+    "**Example problem** : We are given an array containing n objects. Each object, when created, was assigned a unique number from the range 1 to n based on their creation sequence. This means that the object with sequence number 3 was created just before the object with sequence number 4.\n",
     "\n",
     "### Example 2\n",
-    "\n",
+    "We are given an array containing n distinct numbers taken from the range 0 to n. Since the array has only n numbers out of the total n+1 numbers, find the missing number.\n",
     "\n",
     "### Example 3\n",
-    "\n"
+    "We are given an unsorted array containing numbers taken from the range 1 to ‘n’. The array can have duplicates, which means some numbers will be missing. Find all those missing numbers.\n"
    ]
   },
   {
@@ -24,13 +25,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before we view the patterned approach, let’s consider how we can tell if we are on an island. Let’s choose a random spot on the grid:\n",
-    "* If we're on water, is it possible that we're on a new island : **NO**\n",
-    "* If we're on land, is it possible that we're on a new island : **YUP**\n",
+    "Let's focus on the first example problem, and see what sort of pattern reveals itself to us.\n",
     "\n",
-    "Once we find an *unseen* landmass, we can therefore start iterating through adjacent cells until we run out of land to iterate through. We then move on to the next subsequent cell (`0th` row and `1st` column).\n",
+    "While we could apply a sort that takes `O(N^2)`, this will not take advantage of the range of values that are guaranteed to show up in this list.\n",
     "\n",
-    "To simplify this pattern, we will start at the `0th` row and `0th` column of the matrix, and keep looping until we reach the end."
+    "Consider: \n",
+    "* we are given a list of `n` elements\n",
+    "* numbers strictly ranging from 1 to n\n",
+    "\n",
+    "What feature of an array also guarantees a range of numbers from 1 to n? The index,\n",
+    "\n",
+    "We could assume that each `index` of our array is a good indicator as to what value should be showing up in that position! \n",
+    "\n",
+    "Once we make that assumption, creating a sorted list actually becomes quite trivial. We simply use a while-loop to check each index of our list. If an element is not properly sorted, we make a swap with the position that the number SHOULD be in.\n",
+    "\n",
+    "We continue this swap until we get the number that we are looking for in the position that we are at, and then continue the sort."
    ]
   },
   {
@@ -40,99 +49,15 @@
    "source": [
     "Let's write down what we have so far...\n",
     "\n",
-    "**Island Pattern**\n",
+    "**Cyclic Sort Pattern**\n",
     "\n",
-    "1. Loop through all rows\n",
-    "    1. Loop through all column\n",
-    "        1. If cell is water, or seen already --> skip\n",
-    "        2. If new land cell --> count up island & start traversing while marking each land-cell that you observe\n",
+    "1. while i < len(nums)\n",
+    "    1. calculate the value that should be in index position i\n",
+    "    2. if this value is not in position i\n",
+    "        1. perform a swap with the intended position\n",
+    "    3. else, continue the loop\n",
     "\n",
-    "While it is generally *ok* to leave implementation ambiguous when it is pseudocode, we will notice that a **large** feature has been left undefined. That is, searching for adjacent land-masses.\n",
-    "\n",
-    "This problem is not trivial and entails the usage of either [depth-first-search](https://en.wikipedia.org/wiki/Depth-first_search) or [breadth-first search](https://en.wikipedia.org/wiki/Breadth-first_search). These are two fundemental algorithms that every engineer should know (just the pseudocode) since they find their utility in so many searching problems. So, we could re-write the above pseudocode as:\n",
-    "\n",
-    "**Island Pattern Revised**\n",
-    "\n",
-    "1. Loop through all rows\n",
-    "    1. Loop through all column\n",
-    "        1. If cell is water, or seen already --> skip\n",
-    "        2. If new land cell --> count up island & use DFS (or BFS)\n",
-    "\n",
-    "Let's go over the pseudocode of these two algorithms in the cells below:"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Depth First Search (DFS)\n",
-    "\n",
-    "In a nutshell, we use these two algorithms when traversing a [graph](https://en.wikipedia.org/wiki/Graph_(abstract_data_type)). This is a structure of data that entails `nodes` (focal pieces of data) and `edges` (connections between those pieces of data). This is a fascinating data-structure simply for the fact that we can represent so many real-life ideas & structures using a graph.\n",
-    " * cities & airline connections between cities\n",
-    " * family trees\n",
-    " * language etymology\n",
-    " * social networks\n",
-    "\n",
-    "Basically, if you can think of a way to connect two pieces of information or data, you have a graph. Find out more [here](https://isaaccomputerscience.org/concepts/dsa_datastruct_graph?examBoard=all&stage=all).\n",
-    "\n",
-    "Now, to traverse such a structure, we must utilize a patterned approach where we either prioritize `depth` or `breadth`. In DFS, we start at a singular node and then prioritize traveling as `deep` into the graph as we can before we hit a dead-end (or a goal node, in which case we simply stop the search). If we hit a dead-end, we then go back to the last-non dead-end node, and search its subsequent neighbors.\n",
-    "\n",
-    "Once we see a [visual of this algorithm](https://www.youtube.com/watch?v=iaBEKo5sM7w), the idea is quite intuitive.\n",
-    "\n",
-    "A fundemental part of this algorithm is the [stack](https://www.geeksforgeeks.org/stack-data-structure/) data-structure, which is a First-In Last-Out (FILO) list of data. I encourage you to explore the posted links & explore the video to get an understanding of how this algorithm works.\n",
-    "\n",
-    "**DFS Pseudocode**\n",
-    "\n",
-    "1. Create an empty stack\n",
-    "2. Create an empty set called seen\n",
-    "3. Push first position to stack\n",
-    "4. Push first position to seen\n",
-    "5. While stack is not empty:\n",
-    "    1. Pop stack and get last added position\n",
-    "    2. Search through every possible neighbor of last seen position (North, South, East, West)\n",
-    "    3. If neighbor is land and not seen, push to seen & stack"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Breadth First Search (BFS)\n",
-    "\n",
-    "As mentioned above, the BFS algorithm prioritize `breadth` over `depth`. That is, it will explore every single possible neighbor, before moving to another \"depth\" of our graph. A visualization of this algorithm is included [here](https://www.youtube.com/watch?v=QRq6p9s8NVg).\n",
-    "\n",
-    "A fundemental part of this algorithm is the [queue](https://www.geeksforgeeks.org/queue-data-structure/). If your first exposure to the English language was British English (as opposed to American English), you'll recognize this word as simply meaning \"line.\" That is, the first element in is the first element out (FIFO). \n",
-    "\n",
-    "Thankfully, the algorithm for BFS will simply be the same thing as DFS, but just with the `queue` data-structure. Now, bfs and dfs are fundementally used for different use-cases. However, notice that they are essentially the **same** algorithm with simply one data-structure swapped out! This proves that data-structures are just as important as algorithms when it comes to engineering.\n",
-    "\n",
-    "Never underestimate the value of using a different data-structure!!!\n",
-    "\n",
-    "**BFS Pseudocode**\n",
-    "\n",
-    "1. Create an empty **queue**\n",
-    "2. Create an empty set called seen\n",
-    "3. Push first position to **queue**\n",
-    "4. Push first position to seen\n",
-    "5. While **queue** is not empty:\n",
-    "    1. Pop **queue** and get first added position\n",
-    "    2. Search through every possible neighbor of last seen position (North, South, East, West)\n",
-    "    3. If neighbor is land and not seen, push to seen & stack"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Island Discovery\n",
-    "\n",
-    "The following solution is a mix of pseudocode & Python code that can be used to solve the [Num of Islands](https://leetcode.com/problems/number-of-islands/) problem. Give this problem a shot, and try to fill in the remaining lines of pseudocode to create a functioning solution.\n",
-    "\n",
-    "Keep in mind that this might not be the most efficient solution! Find ways to reduce bottle-neck (or unnecessary passing of variables) to speed your program up. Perhaps we could also remove the need for extraneous data-structures such as seen?\n",
-    "\n",
-    "And remember the journey is the goal in programming. Don't be driven by the need to complete, but rather the desire to discover how this computational way of thinking can help us solve *complex* problems. Always be sure to step away from code when it becomes too much, prioritize sleep, and let us know what you find fascinating in this field that we are fortunate enough to work in."
+    "The following is a mix of pseudocode and Python code. Attempt to complete this problem!"
    ]
   },
   {
@@ -141,46 +66,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Solution(object):\n",
-    "    def numIslands(self, grid):\n",
-    "        \"\"\"\n",
-    "        :type grid: List[List[str]]\n",
-    "        :rtype: int\n",
-    "        \"\"\"\n",
-    "        seen = set()\n",
-    "        count = 0\n",
-    "        # for each row\n",
-    "            # for each column\n",
-    "                cell = grid[i][j]\n",
-    "                if cell == \"0\" or (i, j) in seen:\n",
-    "                    continue\n",
-    "                # otherwise, count up and call bfs (or dfs), pass in seen, grid, and row & col\n",
-    "        return count\n",
-    "    \n",
-    "    def get_neighbors(self, row, col, grid):\n",
-    "        neighbors = []\n",
-    "        # if north is not out of bounds, append to neighbors\n",
-    "        # if south is not out of bounds, append to neighbors\n",
-    "        # if east is not out of bounds, append to neighbors\n",
-    "        # if west is not out of bounds, append to neighbors\n",
-    "        return []\n",
+    "def cyclic_sort(nums):\n",
+    "  i = 0\n",
+    "  while i < len(nums):\n",
+    "    # calculate the value that should be at index position i\n",
+    "    if # the calculated value is NOT what is at position i:\n",
+    "       # swap\n",
+    "    else:\n",
+    "      # continue increment\n",
+    "  return nums"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Time Complexity \n",
     "\n",
-    "    def bfs(self, row, col, grid, seen):\n",
-    "        queue = []\n",
-    "        queue.append((row, col))\n",
-    "        seen.add((row, col))\n",
+    "Consider the time complexity of this problem. \n",
     "\n",
-    "        while len(queue) != 0:\n",
-    "            next_cell = queue.pop(0)\n",
-    "            neighbors = self.get_neighbors(next_cell[0], next_cell[1])\n",
-    "            for n in neighbors:\n",
-    "                # if n is 1 and (n[0], n[1]) not in seen,\n",
-    "                    # add to queue\n",
-    "                    # add to queue\n",
-    "        \n",
-    "    def dfs(self, row, col, grid, seen):\n",
-    "        # re-implement bfs, but this time with a stack!\n",
-    "            "
+    "In the worst case, how many swaps will it take our algorithm until we are in sorted order? From there, how many iterations will it take to go through the successfully sorted list?"
    ]
   },
   {
@@ -190,11 +96,10 @@
    "source": [
     "## More Patterns, More Problems\n",
     "\n",
-    "Problems that can be solved using island (DFS or BFS) pattern.\n",
+    "Problems that can be solved using cyclic sort:\n",
     "\n",
-    "* [Num of Islands](https://leetcode.com/problems/number-of-islands/)\n",
-    "* [Island Perimeter](https://leetcode.com/problems/island-perimeter/)\n",
-    "* [Flood Fill](https://leetcode.com/problems/flood-fill/)"
+    "* [Missing Num](https://leetcode.com/problems/missing-number/)\n",
+    "* [All Missing Num](https://leetcode.com/problems/find-all-numbers-disappeared-in-an-array/)"
    ]
   }
  ],
