--- a/phase_3/week_1/3_21/challenge_stats_interview_questions.ipynb
+++ b/phase_3/week_1/3_21/challenge_stats_interview_questions.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "We have 10 cube marbles and 10 sphere marbles.\n",
     "\n",
-    "Each shape of marble has 5 red marbles and 5 yellow marbles.\n",
+    "Each type of marble has 5 red marbles and 5 yellow marbles.\n",
     "\n",
     "What is the probability of selecting a red marble or a cube marble?"
    ]
