Added technical interview

--- a/tech_patterns/cyclic_sort.ipynb
+++ b/tech_patterns/cyclic_sort.ipynb
@@ -52,7 +52,7 @@
     "**Cyclic Sort Pattern**\n",
     "\n",
     "1. while i < len(nums)\n",
-    "    1. calculate the value that should be in index position i\n",
+    "    1. calculate the position that the value of index i should be in\n",
     "    2. if this value is not in position i\n",
     "        1. perform a swap with the intended position\n",
     "    3. else, continue the loop\n",
@@ -69,7 +69,7 @@
     "def cyclic_sort(nums):\n",
     "  i = 0\n",
     "  while i < len(nums):\n",
-    "    # calculate the value that should be at index position i\n",
+    "    # calculate the index position that the value at index \"i\" should be\n",
     "    if # the calculated value is NOT what is at position i:\n",
     "       # swap\n",
     "    else:\n",
