--- a/phase_3/week_1/3_21/basic_stats_review_notes.ipynb
+++ b/phase_3/week_1/3_21/basic_stats_review_notes.ipynb
@@ -1037,6 +1037,26 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## KS-Test or WM-Test\n",
+    "\n",
+    "The KS-Test (> 30 samples) & WM-Test (< 30 samples) check if two groups of data come from the same sampling distribution.\n",
+    "* Any distribution of data\n",
+    "* Small or large datasets\n",
+    "\n",
+    "    Null hypothesis → There is NO difference in distribution between our two groups.\n",
+    "    Alt Hypothesis → There IS difference in distribution between our two groups.\n",
+    "\n",
+    "Application: Check if distribution is statistically different between groups. Remember, we reject the null hypothesis if p < 0.05. Therefore, if p < 0.05, we state that there is OUR DATA DOES NOT MATCH OUR TEST DISTRIBUTION(usually normal)! \n",
+    "We should either work on normalizing our data, or we should try non-parametric methods!\n",
+    "\n",
+    "http://www2.psychology.uiowa.edu/faculty/mordkoff/GradStats/part%201/I.07%20normal.pdf"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
