Added review material

--- a/phase_3/week_2/3_27/sprint1_notes.ipynb
+++ b/phase_3/week_2/3_27/sprint1_notes.ipynb
@@ -72,17 +72,17 @@
     "## Post-Study Material\n",
     "\n",
     "Videos\n",
-    "* GitHub Playlist\n",
+    "* [GitHub Playlist](https://www.youtube.com/watch?v=6xPf-8ekthc&list=PLclBFIrEqwsd2xHEITDJfti4t-9YRCxya)\n",
     "Notes\n",
-    "* Phase 3 - Week 1 - 3/21 - Notes\n",
-    "* Phase 3 - Week 2 - 3/27 - Notes\n",
+    "* [Phase 3 - Week 1 - 3/21 - Notes](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_3/week_1/3_21/basic_stats_review_notes.ipynb)\n",
+    "* [Phase 3 - Week 2 - 3/27 - Notes](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_3/week_2/3_27/sprint1_notes.ipynb)\n",
     "Reading Material\n",
-    "* ISLR Ch 2.1 - 2.2\n",
-    "* ISLR Ch 3.1 - 3.3\n",
-    "* ISLR Ch 6.2\n",
-    "* Levene’s Test\n",
-    "* ANOVA \n",
-    "* Kruskal-Wallis \n"
+    "* [ISLR Ch 2.1 - 2.2](https://hastie.su.domains/ISLR2/ISLRv2_website.pdf)\n",
+    "* [ISLR Ch 3.1 - 3.3](https://hastie.su.domains/ISLR2/ISLRv2_website.pdf)\n",
+    "* [ISLR Ch 6.2](https://hastie.su.domains/ISLR2/ISLRv2_website.pdf)\n",
+    "* [Levene’s Test](https://biotoolbox.binghamton.edu/Biostatistics/Biostatistics%20Student%20Tutorials/Levene%20Test/Levene.pdf)\n",
+    "* [ANOVA](https://www.reneshbedre.com/blog/anova.html)\n",
+    "* [Kruskal-Wallis](https://www.statisticshowto.com/probability-and-statistics/statistics-definitions/kruskal-wallis/)\n"
    ]
   }
  ],
