--- a/phase_3/week_2/3_27/sprint1_notes.ipynb
+++ b/phase_3/week_2/3_27/sprint1_notes.ipynb
@@ -5,6 +5,152 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Stats Review Problems\n",
+    "\n",
+    "Answer the following questions using the notes from `phase_3/week_1/3_21/basic_stats_review_notes.ipynb` and the respective slides.\n",
+    "\n",
+    "This will NOT be graded, but we will review answers together."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q1\n",
+    "\n",
+    "What is the definition a parametric statistical method?\n",
+    "\n",
+    "Uncomment the best answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(\"A statistical method that assumes normality of sampling distribution\")\n",
+    "# print(\"A statistical method that assumes a skewed distribution\")\n",
+    "# print(\"A statistical method that assumes the central limit theorem\")\n",
+    "# print(\"A statistical method that assumes the law of large numbers\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q2\n",
+    "\n",
+    "What is the name of the distribution that displays normality after applying the logarithmic function?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(\"Normal Distribution\")\n",
+    "# print(\"Log-Normal Distribution\")\n",
+    "# print(\"Skewed Distribution\")\n",
+    "# print(\"Platykurtic Distribution\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q3\n",
+    "\n",
+    "What is the name of the distribution that displays high peaks & excess outliers?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(\"Leptokurtic Distribution\")\n",
+    "# print(\"Mesokurtic Distribution\")\n",
+    "# print(\"Platykurtic Distribution\")\n",
+    "# print(\"Jurassic Distribution\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q4\n",
+    "\n",
+    "I do NOT know population variance, and I want to analyze the difference in means for 2 groups of data. Which hypothesis test do I use?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(\"Kolmogorov-Smirnov Test\")\n",
+    "# print(\"2-Sample T-Test\")\n",
+    "# print(\"2-Sample Z-Test\")\n",
+    "# print(\"Kruskal-Wallis ANOVA\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q5\n",
+    "\n",
+    "I want to check the difference in means between 3 groups that come from a non-normally distributed dataset. Which test do I use?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(\"Kolmogorov-Smirnov Test\")\n",
+    "# print(\"2-Sample T-Test\")\n",
+    "# print(\"2-Sample Z-Test\")\n",
+    "# print(\"Kruskal-Wallis ANOVA\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q6\n",
+    "\n",
+    "I want to check if a dataset of 1000 samples comes from a normal distribution. Which hypothesis test do I use?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(\"Kolmogorov-Smirnov Test\")\n",
+    "# print(\"2-Sample T-Test\")\n",
+    "# print(\"2-Sample Z-Test\")\n",
+    "# print(\"Kruskal-Wallis ANOVA\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Sprint 1 Deliverables\n",
     "\n",
     "Sprint 1 Deliverables due 4/3:\n",
@@ -71,12 +217,16 @@
    "source": [
     "## Post-Study Material\n",
     "\n",
-    "Videos\n",
-    "* [GitHub Playlist](https://www.youtube.com/watch?v=6xPf-8ekthc&list=PLclBFIrEqwsd2xHEITDJfti4t-9YRCxya)\n",
-    "Notes\n",
-    "* [Phase 3 - Week 1 - 3/21 - Notes](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_3/week_1/3_21/basic_stats_review_notes.ipynb)\n",
-    "* [Phase 3 - Week 2 - 3/27 - Notes](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_3/week_2/3_27/sprint1_notes.ipynb)\n",
-    "Reading Material\n",
+    "Videos  \n",
+    "* [GitHub Playlist](https://www.youtube.com/watch?v=6xPf-8ekthc&list=PLclBFIrEqwsd2xHEITDJfti4t-9YRCxya)  \n",
+    "\n",
+    "\n",
+    "Notes  \n",
+    "* [Phase 3 - Week 1 - 3/21 - Notes](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_3/week_1/3_21/basic_stats_review_notes.ipynb)  \n",
+    "* [Phase 3 - Week 2 - 3/27 - Notes](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_3/week_2/3_27/sprint1_notes.ipynb)  \n",
+    "\n",
+    "\n",
+    "Reading Material  \n",
     "* [ISLR Ch 2.1 - 2.2](https://hastie.su.domains/ISLR2/ISLRv2_website.pdf)\n",
     "* [ISLR Ch 3.1 - 3.3](https://hastie.su.domains/ISLR2/ISLRv2_website.pdf)\n",
     "* [ISLR Ch 6.2](https://hastie.su.domains/ISLR2/ISLRv2_website.pdf)\n",
