--- a/phase_3/week_1/3_21/basic_stats_interview_questions.ipynb
+++ b/phase_3/week_1/3_21/basic_stats_interview_questions.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#print(\"Collect more data\")\n",
+    "print(\"Collect more data\")\n",
     "#print(\"Remove outliers\")\n",
     "#print(\"Log-Normalize\")\n",
     "#print(\"Look for more classes in your data\")"
@@ -45,7 +45,7 @@
     "#print(\"Collect more data\")\n",
     "#print(\"Remove outliers\")\n",
     "#print(\"Log-Normalize\")\n",
-    "#print(\"Look for more classes in your data\")"
+    "print(\"Look for more classes in your data\")"
    ]
   },
   {
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "#print(\"Collect more data\")\n",
-    "#print(\"Remove outliers\")\n",
+    "print(\"Remove outliers\")\n",
     "#print(\"Log-Normalize\")\n",
     "#print(\"Look for more classes in your data\")"
    ]
@@ -87,7 +87,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "write answer here"
+    "Normal Distribution\n",
+    "\n",
+    "Gaussian Distribution\n",
+    "\n",
+    "Bell Curve"
    ]
   },
   {
@@ -189,7 +193,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "write answer here "
+    "Since p < 0.05 (which is the cutoff of significance), we reject the null hypothesis that states distribution is normal.\n",
+    "\n",
+    "Therefore our dist. is NOT normal."
    ]
   },
   {
@@ -207,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "write answer here "
+    "There is a statisically significant difference in means."
    ]
   },
   {
