--- a/phase_3/week_2/3_28/basic_python_notes.ipynb
+++ b/phase_3/week_2/3_28/basic_python_notes.ipynb
@@ -86,7 +86,7 @@
     "Similairly, we can boil down our data-types in Python to some essential types:\n",
     "\n",
     "* int : whole numbers with no decimal\n",
-    "* char : single character (notice how I am not taking about strings!)\n",
+    "* char : single character (notice how I am not talking about strings!)\n",
     "* float : number with decimal\n",
     "* boolean : true or false \n",
     "\n",
@@ -561,7 +561,7 @@
     "\n",
     "### For-Loops\n",
     "\n",
-    "Primarily used for when we KNOW how many times something should iterate (i.e. loop through elements of a data-structre)\n",
+    "Primarily used for when we KNOW how many times something should iterate (i.e. loop through elements of a data-structure)\n",
     "\n",
     "```python\n",
     "# start, stop, step\n",
@@ -1007,7 +1007,7 @@
    "source": [
     "## Functions\n",
     "\n",
-    "You should realize by this point that we run functions by writing out the function name and then follow up with a left and right paranthesis. \n",
+    "You should notice by this point that we run functions by writing out the function name and then follow up with a left and right parenthesis. \n",
     "\n",
     "`function()`  \n",
     "\n",
@@ -1147,6 +1147,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Optional Typing\n",
+    "\n",
+    "As a refresher, we can also specify types in our python code via type-hints. Python will not yell at you for violating these types, but this basically serves as documentation for other developers. Some organizations choose to do this, others do not. \n",
+    "\n",
+    "```python\n",
+    "def divider(a: int, b: int) -> int:\n",
+    "    ''' summary\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    a:  int\n",
+    "        First int\n",
+    "    b:  int\n",
+    "        Second int\n",
+    "\n",
+    "    Returns\n",
+    "    ----------\n",
+    "    int\n",
+    "        An integer representing the quotient of a & b\n",
+    "    ''' \n",
+    "    return a / b\n",
+    "```\n",
+    "\n",
+    "https://docs.python.org/3/library/typing.html"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Generator\n",
     "\n",
     "Let's say you are reading in a large file or calculating a series of numbers that entails too much memory usage. This could easily lead to a runtime memory error if we utilize more memory than is allocated on our OS for running programs. \n",
@@ -1184,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1222,8 +1253,9 @@
     "\n",
     "I recommend you take a look at the following RealPython article(s) to get a good idea of how decorators are used.\n",
     "\n",
-    "https://realpython.com/primer-on-python-decorators/\n",
-    "https://docs.python.org/3/library/functools.html"
+    "https://realpython.com/primer-on-python-decorators/  \n",
+    "https://docs.python.org/3/library/functools.html  \n",
+    "https://refactoring.guru/design-patterns/decorator  "
    ]
   },
   {
@@ -1331,7 +1363,9 @@
     "res = factorial(1000)\n",
     "end = time.time()\n",
     "\n",
-    "print(\"This took \", end - start, \" seconds\")"
+    "print(\"This took \", end - start, \" seconds\")\n",
+    "\n",
+    "# notice the difference in time efficiency!"
    ]
   },
   {
@@ -1340,7 +1374,67 @@
    "metadata": {},
    "source": [
     "## Packing & Unpacking\n",
-    "\n"
+    "\n",
+    "A feature of Python you all might have seen already in the domain of data-structures is packing & unpacking. \n",
+    "\n",
+    "We can pack a list using the `*` operator, and similarly unpack a list by placing the asterisk behind the list variable name as we pass it into a function.\n",
+    "\n",
+    "**list packing**\n",
+    "```python\n",
+    "a, *b, c = [1, 2, 3, 4, 5, 6]\n",
+    "```\n",
+    "\n",
+    "**list unpacking**\n",
+    "```python\n",
+    "def adder(a, b, c, d):\n",
+    "    return a + b + c + d\n",
+    "\n",
+    "x = [1, 2, 3, 4]\n",
+    "adder(*x)\n",
+    "```\n",
+    "\n",
+    "The same applies for dictionaries, except this time we utilize two asterisks `**`.\n",
+    "\n",
+    "**dictionary unpacking**\n",
+    "```python\n",
+    "def adder(a, b, c, d):\n",
+    "    return a + b + c + d\n",
+    "\n",
+    "x = {\"a\": 1, \"b\": 2, \"c\": 3, \"d\": 4}\n",
+    "adder(**x)\n",
+    "```\n",
+    "\n",
+    "https://www.geeksforgeeks.org/packing-and-unpacking-arguments-in-python/\n",
+    "\n",
+    "\n",
+    "Attempt to solve the 3 questions in the below code-block. Questions are labeled as `Q#` and set as comments. Write your answer below or next to the question. Attempt to do this without running!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [1, 2, 3, 4]\n",
+    "y = [5, 6, 7, 8]\n",
+    "\n",
+    "z = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
+    "\n",
+    "def var_reveal(a, b, c):\n",
+    "    print(\"The value of a is\", a)\n",
+    "    print(\"The value of b is\", b)\n",
+    "    print(\"The value of c is\", c)\n",
+    "\n",
+    "# Q1: what will be the result of this print statement?\n",
+    "print([*x, *y])\n",
+    "\n",
+    "# Q2: what will be the result of this print statement?\n",
+    "print(var_reveal(**z))\n",
+    "\n",
+    "x, *y, z = [1, 2, 3, 4]\n",
+    "# Q3: what will be the result of this print statement?\n",
+    "print(y)"
    ]
   },
   {
@@ -1350,7 +1444,7 @@
    "source": [
     "## Command Line Arguments\n",
     "\n",
-    "We can actually take in \"arguments\" from a command line in our Python program. This is especially useful for when we are running programs from the terminal. As a referesher, we run programs using the python interpreter via `python filename.py`. Let's assume that this program prints out \"hello world\" once.\n",
+    "We can actually take in \"arguments\" from a command line in our Python program. This is especially useful for when we are running programs from the terminal. As a refresher, we run programs using the python interpreter via `python filename.py`. Let's assume that this program prints out \"hello world\" once.\n",
     "\n",
     "```python\n",
     "#filename.py\n",
@@ -1397,9 +1491,46 @@
    "source": [
     "## Lambda Functions\n",
     "\n",
+    "Lambda functions are an implementation  of [lambda calculus](https://plato.stanford.edu/entries/lambda-calculus/), a hallmark of functional programming languages such as Scala.\n",
     "\n",
+    "The pattern to lambda functions entail `lambda var1, var2: one-line of code`. Notice how a lambda function only has \"room\" for a singular line of code. For any functionality that requires more than 1 line of code, simply use a regular function.\n",
     "\n",
-    "https://realpython.com/python-lambda/"
+    "Whatever the singular line of code evalutes to is what will be your return value.\n",
+    "\n",
+    "```python \n",
+    "def x(n1, n2):\n",
+    "    return n1 + n2\n",
+    "\n",
+    "# can be expressed as...\n",
+    "x = lambda n1, n2: n1 + n2\n",
+    "\n",
+    "def y(n1):\n",
+    "    if n1 == \"red\":\n",
+    "        return \"blue!\"\n",
+    "    else:\n",
+    "        return \"green!\"\n",
+    "\n",
+    "# can be expressed as...   \n",
+    "y = lambda n1: \"blue!\" if n1 == \"red\" \"green!\"\n",
+    "```\n",
+    "\n",
+    "We use lambda functions to quickly generate nameless \"anonymous functions\". \n",
+    "\n",
+    "```python\n",
+    "z = lambda x, y: x + y\n",
+    "print(z(2, 4))\n",
+    "```\n",
+    "\n",
+    "This concept usually finds its utility in conjunction with pandas dataframes, as we'll see in the questions below.\n",
+    "\n",
+    "```python\n",
+    "# this lambda function will take each data in the `col1` series  and lowercase it\n",
+    "df[\"col1\"].apply(lambda x: x.lower())\n",
+    "```\n",
+    "\n",
+    "https://realpython.com/python-lambda/\n",
+    "\n",
+    "Attempt to solve the 3 questions in the below code-block. Questions are labeled as `Q#` and set as comments. Write your answer below or next to the question. Attempt to do this without running!"
    ]
   },
   {
@@ -1408,7 +1539,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lambda x, y: x + y"
+    "import pandas as pd\n",
+    "\n",
+    "def clean_str(word):\n",
+    "    return word.replace(\"spam\", \"\")\n",
+    "#Q1: Translate the above function into a lambda function\n",
+    "\n",
+    "clean_str = ...\n",
+    "\n",
+    "def get_last_char(word):\n",
+    "    return word[-1]\n",
+    "#Q2: Translate the above function into a lambda function\n",
+    "\n",
+    "get_last_char = ...\n",
+    "\n",
+    "data = {'col1': [0, 1, 2, 3], 'col2': [\"red\", \"blue\", \"yellow\", \"green\"]}\n",
+    "df = pd.DataFrame(data=data, index=[0, 1, 2, 3])\n",
+    "\n",
+    "#Q3: Write a lambda function in the `apply` method to add 100 to each row in the `col1` column\n",
+    "df.loc[\"col1\"] = df[\"col1\"].apply(...)"
    ]
   },
   {
